--- a/app/src/main/res/layout/item_type.xml
+++ b/app/src/main/res/layout/item_type.xml
@@ -7,14 +7,6 @@
     android:paddingLeft="4dp"
     android:paddingRight="4dp">
 
-    <ImageView
-        android:id="@+id/iv_app"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="8dp"
-        android:src="@mipmap/head_1" />
-
     <TextView
         android:id="@+id/tv_app"
         android:layout_width="wrap_content"
@@ -22,19 +14,18 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="12dp"
         android:layout_toRightOf="@+id/iv_app"
-        android:text="@string/app_name"
+        android:text="系统应用"
         android:textColor="@color/white"
         android:textSize="15sp" />
 
 
-    <Switch
-        android:id="@+id/stn_destroy_task"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/iv"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:checked="true"
-        android:theme="@style/SwitchTheme" />
+        android:src="@mipmap/right" />
 
     <View
         android:layout_width="match_parent"
@@ -42,6 +33,6 @@
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:background="@color/white" />
+        android:background="@color/progress_background" />
 
 </RelativeLayout>
