--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -8,6 +8,11 @@
             android:checkable="true"
             android:icon="@mipmap/page_main"
             android:title="@string/main_page" />
+        <item
+            android:id="@+id/menu_task_list"
+            android:checkable="false"
+            android:icon="@mipmap/task_list"
+            android:title="@string/task_list" />
 
         <item
             android:id="@+id/menu_school_timetables"
@@ -16,14 +21,16 @@
             android:title="@string/school_timetables" />
 
 
+
+    </group>
+
+    <group android:id="@+id/group_log_out">
+
         <item
             android:id="@+id/menu_setting"
             android:checkable="false"
             android:icon="@mipmap/settings"
             android:title="@string/setting" />
-    </group>
-
-    <group android:id="@+id/group_log_out">
         <item
             android:id="@+id/menu_login_out"
             android:checkable="false"
