--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
@@ -41,46 +41,53 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:background="@drawable/textview_ripple"
+
+        android:background="@color/light_color"
+        android:foreground="?android:attr/selectableItemBackground"
         android:padding="10dp"
         android:paddingLeft="20dp"
-        tools:text="账号： coderkisoo"
         android:textColor="@color/white"
-        android:textSize="22sp" />
+        android:textSize="22sp"
+        tools:text="账号： coderkisoo" />
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@drawable/textview_ripple"
+
+        android:background="@color/light_color"
         android:drawableRight="@mipmap/update"
+        android:foreground="?android:attr/selectableItemBackground"
         android:padding="10dp"
         android:paddingLeft="20dp"
-        tools:text="昵称： 桥寻"
         android:textColor="@color/white"
-        android:textSize="22sp" />
+        android:textSize="22sp"
+        tools:text="昵称： 桥寻" />
 
     <TextView
         android:id="@+id/tv_school_num"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@drawable/textview_ripple"
+
+        android:background="@color/light_color"
         android:drawableRight="@mipmap/update"
+        android:foreground="?android:attr/selectableItemBackground"
         android:padding="10dp"
         android:paddingLeft="20dp"
-        tools:text="学号： 2014214038"
         android:textColor="@color/white"
-        android:textSize="22sp" />
+        android:textSize="22sp"
+        tools:text="学号： 2014214038" />
 
     <TextView
         android:id="@+id/tv_password_update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@drawable/textview_ripple"
+        android:background="@color/light_color"
         android:drawableRight="@mipmap/right"
+        android:foreground="?android:attr/selectableItemBackground"
         android:padding="10dp"
         android:paddingLeft="20dp"
         android:text="@string/password_update"
