--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,7 +72,7 @@
         android:textSize="14sp" />
 
     <Button
-        android:id="@+id/btn_cancel"
+        android:id="@+id/btn_login"
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
